--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     - 디자인은 tlog-crypto.css
     - 동작/로직은 tlog-crypto.js에서 처리
   -->
-  <link rel="stylesheet" href="crypto.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
@@ -271,6 +271,7 @@
   </div>
 
   <!-- 코인 매매일지 동작 스크립트 -->
-  <script src="crypto.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
