--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="topbar">
       <div class="brand">코인 Tlog</div>
       <div class="nav">
-        <a href="file:///C:/Users/john/Desktop/tlogweb/stocks/stocks.html" class="btn btn-linklike">주식 매매일지</a>
-        <a href="file:///C:/Users/john/Desktop/tlogweb/crypto/crypto.html" class="btn btn-linklike" aria-current="page">코인 매매일지</a>
+        <a href="https://olympusdowon.github.io/tlogstocks/" class="btn btn-linklike">주식 매매일지</a>
+        <a href="https://olympusdowon.github.io/tlogcrypto/" class="btn btn-linklike" aria-current="page">코인 매매일지</a>
       </div>
     </div>
     <div class="subtitle">한 매매씩 입력하면 아래 표에 자동 저장됩니다 (브라우저 로컬 저장).</div>
@@ -274,4 +274,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
