--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+       <!-- 광고 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3808355541569423"
+     crossorigin="anonymous"></script>
+<!-- 수평 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-3808355541569423"
+     data-ad-slot="1254327790"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<!-- 광고 -->
   <div class="container">
     <div class="topbar">
       <div class="brand">코인 Tlog</div>
@@ -211,6 +223,19 @@
       </form>
     </div>
 
+         <!-- 광고 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3808355541569423"
+     crossorigin="anonymous"></script>
+<!-- 수평 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-3808355541569423"
+     data-ad-slot="1254327790"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<!-- 광고 -->
+
     <!-- 표 카드 -->
     <div class="table-wrapper">
       <div class="table-header">
@@ -299,6 +324,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
