--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <!-- 광고 -->
+
+  <section class="card">
+  <div class="card-header">
+    <div class="card-title">오류 제보</div>
+  </div>
+
+  <p class="caption" style="margin-bottom: 12px;">
+    화면이 이상하게 나오거나, 계산이 잘못된 것 같다면 텔레그램으로 알려주세요.
+  </p>
+
+  <a href="https://t.me/manzo_wonil"
+     class="btn btn-secondary"
+     target="_blank"
+     rel="noopener noreferrer">
+    🚨 텔레그램으로 오류 제보하기
+  </a>
+</section>
+
   <div class="container">
     <div class="topbar">
       <div class="brand">코인 Tlog</div>
@@ -324,6 +342,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
